[package]
name = "ip"
version = "0.1.0"
edition = "2021"
description = "Simple command line tool for managing network interface on Theseus OS."
authors = ["Sébastien Canu <sebastien.canu.n7@gmail.com>"]

[dependencies]
getopts = "0.2.21"

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.network_manager]
path = "../../kernel/network_manager"

[dependencies.smoltcp]
version = "0.5.0"
default-features = false
features = [
    "alloc", "ethernet",
    "proto-ipv4", "proto-igmp", "proto-ipv6", "proto-dhcpv4",
    "socket-raw", "socket-udp", "socket-tcp", "socket-icmp",
]
